Version 1.10.0-BETA:
	The LZX compression ratio has been slightly improved.  The default mode,
	LZX level 50, is now almost as good as the old LZX level 100, while
	being nearly the same speed as before.

	Decompression performance has been slightly improved.

	Filenames are now always listed in NTFS collation order.

	On UNIX-like systems, wimlib can now process Windows filenames that are
	not valid Unicode due to the presence of unpaired surrogates.

	On UNIX-like systems, wimlib now always assumes UTF-8 encoding with the
	addition of surrogate codepoints.  Consequently, the environmental
	variable WIMLIB_IMAGEX_USE_UTF8 and the flag
	WIMLIB_INIT_FLAG_ASSUME_UTF8 no longer have any effect.

	wimlib no longer depends on iconv.

	Reduced memory usage slightly.

	When a WIM image is applied in NTFS-3G mode, security descriptors are
	now created in NTFS v3.0 format when supported by the volume.

	Workarounds for bugs in libntfs-3g version 2013.1.13 and earlier have
	been removed.  Users are advised to upgrade to a later version of
	libntfs-3g.

	On Windows, wimlib now supports case-sensitive filename extraction when
	supported by the underlying operating system and filesystem (operating
	system support requires a registry setting).

Version 1.9.2:
	On UNIX, wimlib can now overwrite readonly files when extracting.

	On Windows, fixed a bug where wimlib could leave a null DACL (a.k.a. "no
	NTFS permissions") set on some existing directories after extraction.

	On Windows, when applying a WIM image in "WIMBoot mode" when the WOF
	driver is not loaded, wimlib can now correctly register a new WIM file
	with the target volume when the target volume previously had had WIM
	files unregistered.

	Added a new testing program.

	Clarified the main license text and updated public domain dedications
	for certain files to be more thorough.

Version 1.9.1:
	Object IDs are now saved and restored on Windows and in NTFS-3G mode.
